# mindcase-python

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
mindcase/: __init__.py  cli.py  client.py  exceptions.py  namespaces.py  types.py
mindcase/mcp/: __init__.py  server.py
