[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindcase"
version = "0.3.0"
description = "Python SDK for the Mindcase Developer API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://mindcase.co"
Documentation = "https://docs.mindcase.co"
Repository = "https://github.com/mindcase-team/studio"

[tool.hatch.build.targets.wheel]
packages = ["mindcase"]
